resources/k8s/echoserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-deployment
  template:
    metadata:
      labels:
        app: nginx-deployment
    spec:
      containers:
      - name: nginx-deployment
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  ports:
  #port ingress tro vao trung voi ben kia
  - port: 8080
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: nginx-deployment
  type: ClusterIP
