resources/k8s/llb.yaml
apiVersion: v1
kind: Service
metadata:
  
  name: koleda-be-5525
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: '3500'  
spec:
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: nginx-svc
