resources/k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: vuong5.handmade-vn.com
    http:
      paths:
      - backend:
          service:
            name: nginx-svc
            port:
            #port ingress tro vao trung voi ben kia
              number: 8080
        path: /
        pathType: Prefix
