resources/k8s/ingress2.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: vuong6.handmade-vn.com
    http:
      paths:
      - backend:
          service:
            name: nginx-svc
            port:
            #port ingress tro vao trung voi ben kia
              number: 8080
        path: /
        pathType: Prefix
  
  - host: vuong5.handmade-vn.com
    http:
      paths:
      - backend:
          service:
            name: nginx-svc
            port:
            #port ingress tro vao trung voi ben kia
              number: 8080
        path: /
        pathType: Prefix
